<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/searchPageFragment">


    <fragment
        android:id="@+id/searchPageFragment"
        android:name="ua.aniloom.presentation.pages.search.SearchPageFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_page" />

    <fragment
        android:id="@+id/myListPageFragment"
        android:name="ua.aniloom.presentation.pages.my_list.MyListPageFragment"
        android:label="@string/title_my_list"
        tools:layout="@layout/fragment_my_list_page"/>

    <fragment
        android:id="@+id/profilePageFragment"
        android:name="ua.aniloom.presentation.pages.profile.ProfilePageFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_page"/>

</navigation>