<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="5dp"
    android:paddingStart="0dp"
    android:paddingEnd="20dp"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/poster"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background_img_placeholder" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="12sp"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextAppearance.AniLoom.W500"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="11sp"
            android:textColor="?attr/colorOnSecondary"
            android:textAppearance="@style/TextAppearance.AniLoom.W500"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="@string/centered_dot"
            android:textSize="11sp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="1dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/rating"
            android:src="@drawable/icon_star"
            android:layout_marginTop="1dp"
            app:tint="#56a773"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_0_0"
            android:textSize="11sp"
            android:textColor="#56a773"
            android:textAppearance="@style/TextAppearance.AniLoom.W600"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="1dp"/>

    </LinearLayout>

</LinearLayout>
