<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:contentDescription="@string/poster"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background_img_placeholder"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AniLoom.W700"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="11sp"
                android:textColor="?attr/colorOnSecondary"
                android:textAppearance="@style/TextAppearance.AniLoom.W500"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:text="@string/centered_dot"
                android:textSize="11sp"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginTop="1dp"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/icon_star"
                android:layout_marginTop="1dp"
                app:tint="?attr/colorAccent"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_0_0"
                android:textSize="11sp"
                android:textColor="?attr/colorAccent"
                android:textAppearance="@style/TextAppearance.AniLoom.W600"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="1dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvEps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/eps"
            android:textAppearance="@style/TextAppearance.AniLoom.W500"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="11sp"
            android:layout_gravity="top"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="10dp"
            android:background="?attr/colorOnSecondary" />


    </LinearLayout>

</LinearLayout>