<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/carouselContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card_border"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/posterPager"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AniLoom.W700"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/year"
                android:textAppearance="@style/TextAppearance.AniLoom.W500"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="1.5dp"
                android:text="@string/centered_dot"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/icon_star"
                app:tint="?attr/colorAccent" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="1dp"
                android:text="@string/rate_0_0"
                android:textAppearance="@style/TextAppearance.AniLoom.W600"
                android:textColor="?attr/colorAccent"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotColor="?attr/colorOnSecondary"
        app:selectedDotColor="?attr/colorOnPrimary"
        app:dotRadius="4.5dp"
        app:selectedDotRadius="4.5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/topBannerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_accent_title"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp"
        android:translationY="-12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/rating"
            android:src="@drawable/icon_fire"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/top"
            android:textAppearance="@style/TextAppearance.AniLoom.W700"
            android:textSize="12sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
