<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/searchField">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:contentDescription="@string/title_search"
                android:maxWidth="28dp"
                android:maxHeight="28dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_search"
                app:tint="?attr/colorOnPrimary" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/search_field_hint"
                android:inputType="text"
                android:ems="10"
                android:textAppearance="@style/TextAppearance.AniLoom.Body"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="?attr/colorOnSecondary"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:autofillHints="no"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/bSearchCancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AniLoom.Body"
            android:textColor="?attr/colorOnPrimary"
            android:clickable="true"
            android:layout_marginHorizontal="8dp"
            android:paddingVertical="12dp"
            android:visibility="gone"
            android:layout_gravity="bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="38dp"
            android:layout_height="38dp"
            style="@style/Widget.AniLoom.Button.IconOnly"
            android:hint="@string/filter"
            app:icon="@drawable/icon_filter"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_click" />

        <Space
            android:layout_width="12dp"
            android:layout_height="0.dp"/>

        <HorizontalScrollView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>
        </HorizontalScrollView>




    </LinearLayout>
</LinearLayout>
